--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Build (Windows)
         uses: JackMcKew/pyinstaller-action-windows@v0.1.2
+        with:
+          path: .
 
 
       - name: Create Release
