--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: src/dist/windows/
+          asset_path: dist/windows/main.exe
           asset_name: MindustryLauncher.exe
           asset_content_type: application/vnd.microsoft.portable-executable
