--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           pip install -r requirements.txt -r requirements-dev.txt
           
-      - Name: Build Executable
+      - name: Build Executable
         uses: jimkring/python-script-to-exe@v0.2.0
         with:
           script-name: main
