--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-wxpython @ https://extras.wxpython.org/wxPython4/extras/linux
+wxpython
 requests
 imgui[glfw]
 easygui
 psutil
 Gooey
+--extra-index-url https://extras.wxpython.org/wxPython4/extras/linux
