--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Build Executable
         uses: jimkring/python-script-to-exe@v0.2.0
         with:
+          include-plugin-files: *-PLUGIN.py
           script-name: main.py
           onefile: true
   
