--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
           pip install -r requirements.txt
           pip install nuitka
 
-      - name: Build (${{ runner.os }})
+      - name: Build
         run : |
           python -m nuitka --standalone --enable-plugin=tk-inter --enable-plugin=numpy --windows-disable-console --output-dir=build main.py
 
