--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Build
         run : |
-          python -m nuitka --standalone --enable-plugin=tk-inter --enable-plugin=numpy --windows-disable-console --output-dir=build main.py
+          python -m nuitka --standalone --enable-plugin=tk-inter --enable-plugin=numpy --assume-yes-for-downloads --output-dir=build --onefile main.py
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3.1.0
