--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Build
         run : |
-          python -m nuitka --standalone --enable-plugin=tk-inter --enable-plugin=numpy --assume-yes-for-downloads --output-dir=build --onefile main.py
+          python -m nuitka --standalone --enable-plugin=tk-inter --enable-plugin=numpy --assume-yes-for-downloads --output-dir=build --onefile --windows-disable-console main.py
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3.1.0
@@ -64,7 +64,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: Windows Build
-          path: windows-build
+          path: .
 
       - uses: actions/download-artifact@v3
         with:
@@ -92,7 +92,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: windows-build/main.exe
+          asset_path: main.exe
           asset_name: MindustryLauncher Windows
           asset_content_type: application/zip
 
