--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,7 +93,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: main.exe
-          asset_name: MindustryLauncher Windows
+          asset_name: MindustryLauncher Windows.exe
           asset_content_type: application/zip
 
       - name: Upload Release Asset
@@ -103,5 +103,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: main.bin
-          asset_name: MindustryLauncher Linux
+          asset_name: MindustryLauncher Linux.zip
           asset_content_type: application/zip
