--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,7 +73,7 @@ jobs:
 
       - name: Make executable (Linux)
         run: |
-          chmod +x MindustryLauncher Linux.bin
+          chmod +x main.bin
 
       - name: Create Release
         id: create_release
